--- a/style.css
+++ b/style.css
@@ -284,6 +284,7 @@ iframe {
   border: 2px solid var(--primary);
   transform: scale(1.02);
   position: relative;
+  margin-top: 20px !important;
 }
 
 .badge {
@@ -291,10 +292,13 @@ iframe {
   padding: 5px 15px;
   border-radius: 20px;
   position: absolute;
-  top: -15px;
+  top: -12px;
   right: 20px;
   font-size: 0.9em;
   font-weight: 500;
+  z-index: 2;
+  white-space: nowrap;
+  box-shadow: 0 2px 10px rgba(255, 0, 153, 0.3);
 }
 
 .tools-grid {
